v2.4.x/site/en/userGuide/schema/analyzer/filter/stop-filter.md
---
id: stop-filter.md
title: Stop​ Filter
summary: The `stop` filter removes specified stop words from tokenized text, helping to eliminate common, less meaningful words. You can configure the list of stop words using the `stop_words` parameter.
---

# Stop​

The `stop` filter removes specified stop words from tokenized text, helping to eliminate common, less meaningful words. You can configure the list of stop words using the `stop_words` parameter.​

## Configuration​

The `length` filter is a custom filter in Milvus. To use it, specify `"type": "stop"` in the filter configuration, along with a `stop_words` parameter that provides a list of stop words.​

```python
analyzer_params = {​
    "tokenizer": "standard",​
    "filter":[{​
        "type": "stop", # Specifies the filter type as stop​
        "stop_words": ["of", "to", "_english_"], # Defines custom stop words and includes the English stop word list​
    }],​
}​
```

The `stop` filter accepts the following configurable parameters.​

<table data-block-token="RvK3dMx74obnmXxlMe3cz6W1nUf"><thead><tr><th data-block-token="SRJcd5Os3oLiJyxkT6UcDba0nrb" colspan="1" rowspan="1"><p data-block-token="IBSbdC1ByokHmnxDXomccXXJnmh">Parameter​</p>

</th><th data-block-token="V9fZd2VX7oCaeDxy8fKcDnGpnId" colspan="1" rowspan="1"><p data-block-token="FCA5dw1JEoRB2ExZpYwc8O47nld">Description​</p>

</th></tr></thead><tbody><tr><td data-block-token="AO5idkJ6pobnMmxcDBjcw4T1ngh" colspan="1" rowspan="1"><p data-block-token="ZnnGd5pOloVEBkxy0ZNcPmxen2g"><code>stop_words</code>​</p>

</td><td data-block-token="OaeWdJElZowPJrxzIFccUVoYn22" colspan="1" rowspan="1"><p data-block-token="LWBNdMr8fokmXnxpL5cc9z8Pntd">A list of words to be removed from tokenization. By default, the predefined <code>_english_</code> list, containing common English stop words, is used. The details of <code>_english_</code> can be found <a href="https://github.com/milvus-io/milvus/blob/master/internal/core/thirdparty/tantivy/tantivy-binding/src/stop_words.rs">here</a>.​</p>

</td></tr></tbody></table>

The `stop` filter operates on the terms generated by the tokenizer, so it must be used in combination with a tokenizer.

After defining `analyzer_params`, you can apply them to a `VARCHAR` field when defining a collection schema. This allows Milvus to process the text in that field using the specified analyzer for efficient tokenization and filtering. For details, refer to [Example use](analyzer-overview.md#Example-use).​

## Example output​

Here’s an example of how the `stop` filter processes text:​

**Original text**:​

```python
"The stop filter allows control over common stop words for text processing."​
```

**Expected output** (with `stop_words: ["the", "over", "_english_"]`):​

```python
["The", "stop", "filter", "allows", "control", "common", "stop", "words", "text", "processing"]​
```